// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActionButton /> ActionButton default props 1`] = `
<Styled(WithStyles(Button))
  trait="main"
  type="primary"
  variant="flat"
>
  button
</Styled(WithStyles(Button))>
`;

exports[`<StyledButton /> StyleButton rules 1`] = `
.c0.c0 {
  margin-left: 5px;
  margin-right: 5px;
  background-color: #fff;
  color: #222;
  font-size: 1em;
  height: auto;
  width: auto;
  padding: auto;
}

.c0.c0:hover {
  background-color: #acacac;
}

<button
  className="MuiButtonBase-root-16 MuiButton-root-1 c0"
  disabled={false}
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-2"
  >
    button
  </span>
  <span
    className="MuiTouchRipple-root-19"
  />
</button>
`;

exports[`<StyledButton /> StyledButton default props 1`] = `
.c0.c0 {
  margin-left: 5px;
  margin-right: 5px;
  background-color: #fff;
  color: #222;
  font-size: 1em;
  height: auto;
  width: auto;
  padding: auto;
}

.c0.c0:hover {
  background-color: #acacac;
}

<WithStyles(Button)
  className="c0"
>
  button
</WithStyles(Button)>
`;
